2003-10-19 Craig Franklin <craigfranklin@comcast.net>
  * Updated documentation.

2003-10-18 Craig Franklin <craigfranklin@comcast.net>
  * Fixed a bug in 16xx special instruction mnemonics that could cause
    an incorrect branch calculation if a goto proceded the mnemonic.

2003-10-17 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.7 Released.

2003-10-09 Craig Franklin <craigfranklin@comcast.net>
  * Allow gplink to parse linker scripts with missing newlines before the 
    EOF.

2003-10-08 Craig Franklin <craigfranklin@comcast.net>
  * Fixed an initialization problem that causes a segfault when the first
    line has a parse error.

2003-10-03 Craig Franklin <craigfranklin@comcast.net>
  * Added 18xx config and idlocs sections to gpasm coff outputs.
  * Cleaned up gplink script error reporting.

2003-09-28 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gplink bug in 18xx absolute sections.
  * Fixed gplink memory allocation bug in 18xx devices.

2003-08-08 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bug that could cause problems with comments on include directives.

2003-08-01 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.6 Released.
  * Added support for idata sections in gplink.
  * Changed extension of gplink object output from ".out" to ".cof"

2003-07-23 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bsr boundary location for 18f248, 18f258,18f448, and 18f458.
  * Changed gpasm, gpdasm, and gpvo memory dump address format from word to
    byte for 18xx devices.
  * Changed gplink processor check to be processor family instead of processor
    name.
  * Changed gpdasm to display the second word of 18xx two word instructions.

2003-07-20 Craig Franklin <craigfranklin@comcast.net>
  * Added new processors: 16f716, 18f2620, 18f4620
  * Update header files and linker scripts.
  * Fixed gplink error that caused the map file to always be generated.